--- a/client/src/styles.scss
+++ b/client/src/styles.scss
@@ -9,6 +9,8 @@
 html, body {
   width: 100%;
   overflow-x: hidden;
+  height: 100%;
+  position: relative;
 }
 
 :root {
